--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Company Profile A26</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="img/gem-solid.svg" />
+    <link rel="shortcut icon" href="gem-solid.svg" />
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -61,7 +61,7 @@
     <div class="container-sejarah" id="sejarah">
       <div class="box-content">
         <div class="img" data-aos="fade-right">
-          <img src="img/sejarah1.jpg" />
+          <img src="sejarah1.jpg" />
         </div>
         <div class="text" data-aos="fade-left" data-aos-delay="300" data-aos-duration="1000">
           <h3>Sejarah Perusahaan</h3>
@@ -79,7 +79,7 @@
           <p>+ Lorem ipsum dolor.</p>
         </div>
         <div class="img" data-aos="fade-left">
-          <img src="img/7.jpg" alt="" />
+          <img src="7.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -90,10 +90,10 @@
       <h3 class="heading" data-aos="fade-down">Produk <span>Terkini</span></h3>
       <div class="box-produk">
         <div class="img" data-aos="zoom-in" data-aos-duration="1000">
-          <img src="img/13.jpg" alt="" />
+          <img src="13.jpg" alt="" />
         </div>
         <div class="img" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="1000">
-          <img src="img/14.jpg" alt="" />
+          <img src="14.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -103,9 +103,9 @@
     <div class="container-penghargaan" id="penghargaan">
       <h3 class="heading" data-aos="fade-down"><span>penghargaan</span></h3>
       <div class="box-penghargaan">
-        <img src="img/5.jpg" alt="" data-aos="flip-left" data-aos-duration="1000" />
-        <img src="img/5.jpg" alt="" data-aos="flip-left" data-aos-delay="200" data-aos-duration="1000" />
-        <img src="img/5.jpg" alt="" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000" />
+        <img src="5.jpg" alt="" data-aos="flip-left" data-aos-duration="1000" />
+        <img src="5.jpg" alt="" data-aos="flip-left" data-aos-delay="200" data-aos-duration="1000" />
+        <img src="5.jpg" alt="" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000" />
       </div>
     </div>
     <!-- akhir penghargaan -->
@@ -131,7 +131,7 @@
 
     <!-- loader -->
     <div class="loader-container">
-      <img src="img/loader.gif" alt="" />
+      <img src="loader.gif" alt="" />
     </div>
     <!-- akhir loader -->
 
